add clang-tidy check

--- a/静态分析/静态分析.md
+++ b/静态分析/静态分析.md
@@ -1,15 +1,6 @@
 # 静态分析
-## 什么是静态分析？
-**静态分析**是在没有实际执行的情况下，分析代码的质量、状态、风格。有助于提早发现错误，保持团队一致的编码风格。
 
-**静态分析**主要由三个核心动作组成：
-* `format`：代码格式化
-* `lint`：代码规范化
-* `fix`：按照规范进行纠正
-
-如何规范和格式化代码，同时对不符合规范的代码进行修复？首先就需要我们先制定好规则。
-
-
+## 静态分析原理
 - `Swift`静态分析
   - [`OC`与`Swift API`映射](../Swift/OC与Swift映射.md)
   - [`SourceKit/SourceKitten`分析](../Swift/SourceKit.md)
@@ -29,6 +20,7 @@
       - [`SwiftLint`如何实现`rule`？](../Swift/SwiftLint.md#在swiftlint中，如何实现一个-rule？)
      
 - `OC/C/C++`静态分析
+    - [`clang-tidy`不依赖`LLVM`构建环境，自定义`check`并调试](../Clang/clang-tidy.md)
     - [`OClint`分析](../Clang/Clang-AST.md)
       - [如何调试`OCLint`？](../Clang/Clang-AST.md#一、如何调试oclint？)
       - [`OCLint`是如何使用内置的规则（`Rule`）的？](../Clang/Clang-AST.md#二、oclint是如何使用内置的规则（-rule）的？)
@@ -36,3 +28,35 @@
       - [实现一个`OCLint`](../Clang/Clang-AST.md#四、实现一个oclint)
       - [理解编译流程](../Clang/Clang-AST.md##五、理解编译流程)
   
+
+## 什么是静态分析？
+**静态分析**是在没有实际执行的情况下，分析代码的质量、状态、风格。有助于提早发现错误，保持团队一致的编码风格。
+
+**静态分析**主要由三个核心动作组成：
+* `format`：代码格式化
+* `lint`：代码规范化
+* `fix`：按照规范进行纠正
+
+如何规范和格式化代码，同时对不符合规范的代码进行修复，到底用不用换行？用不用指明类型？所以，首先就需要我们先制定好规则。
+
+规则的制定应该基于这几个方面：
+* 官方语法规则；
+* 社区达成一致的语法规则；
+* 好的编码风格；
+* 代码长度及复杂程度；
+* 代码性能
+
+接下来就是静态分析工具的选择。
+
+[analysis-tools](https://github.com/analysis-tools-dev/static-analysis)列出了所有编程语言、包括构建工具、及配置文件等的静态分析工具。
+
+对于`Apple`开发者来说，主要针对两种类型的语言进行静态分析：
+* `C/C++/OC`
+    * [`clang-format`](https://clang.llvm.org/docs/ClangFormatStyleOptions.html)：持两种方式进行代码格式化。一种可以通过命令行传参（`-style=`）。第二种使用`-style=file`会自动搜索当前目录下的`.clang-format`或者` _clang-format`文件
+    * `scan-build`：使用`clang`内置的静态分析器
+    * `clang-check`：基于`LibTooling`，用于进行基本的错误检查和`AST`读取。在文档[` Available Checkers`](https://clang.llvm.org/docs/analyzer/checkers.html)列出了当前完成的和试验性`check`
+    * `clang-tidy`也是基于`LibTooling`的`linter`，除了可以进行错误检查，还可以进行修复，同时可以自定义`check`。也就是说`clang-tidy`功能最全，最复杂
+    * `OCLint`：三方制作
+* `Swift`
+    * `SwiftFormat`：进行基本的错误检查和代码修复
+    * `SwiftLint`：开源社区参与度非常高的`Swift linter`工具
